# anthill-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTENANCE.md  README.md  README.zh.md  ROADMAP.md  VERSIONING.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  claude.yml
docs/: benchmark.md  commands.md  comparison.md  experience.md  strengths.md  values.md  why-anthill.md
docs/zh/: quickstart.md
examples/: emergent_specialization.py  lifecycle_cycle.py  multi_step_research.py
scripts/: install.sh  smoke-test.sh
src/anthill/: __init__.py  config.py
src/anthill/bench/: __init__.py  compare.py  evaluator.py  runners.py  tasks.py
src/anthill/channels/: __init__.py  base.py  daemon.py  discord.py  email.py  lark.py  slack.py  telegram.py  wecom.py
src/anthill/cli/: __init__.py  channel_cmd.py  citizen_cmd.py  completion.py  cron_cmd.py  doctor.py  main.py  model_catalog.py  model_cmd.py  nation_cmd.py  providers_meta.py  repl.py  setup.py  setup_cmd.py  test_cmd.py  values_cmd.py
src/anthill/core/: __init__.py  agent.py  agent_loop.py  api_failover.py  attachments.py  auto_memory.py  background.py  browser_drive.py  browser_setup.py  budget.py  citizen_check.py  clarify.py  colony.py  complexity.py  conversation.py  cost_signal.py  costs.py  cron.py  culture.py  delegate.py  deliberate.py  ensemble.py  episodic.py  executor.py  facts.py  failure.py  feedback.py  followups.py  history.py  immune.py  inflight.py  judge.py  kanban.py  kanban_tools.py  lifecycle.py  loop.py  memory_files.py  memory_hygiene.py  nation.py  page_inspector.py  (+39 more)
src/anthill/mcp/: __init__.py  client.py  server.py
src/anthill/models/: __init__.py  base.py  deepseek.py  minimax.py  openai_compatible.py  registry.py
src/anthill/plugins/: __init__.py  base.py  browser.py  code_exec.py  documents.py  filesystem.py  registry.py  shell.py  web.py
tests/: conftest.py  test_agent_identity.py  test_agent_loop.py  test_agentic_integration.py  test_ages.py  test_api_failover.py  test_ask_timings.py  test_attachments.py  test_auto_memory.py  test_background.py  test_bg_delivery.py  test_bg_history_link.py  test_brevity_directive.py  test_browser_drive.py  test_browser_plugins.py  test_browser_setup.py  test_budget.py  test_chain.py  test_channel_cmd.py  test_citizen_check.py  test_clarify.py  test_code_exec_plugin.py  test_collaboration_viz.py  test_completion.py  test_complexity.py  test_context_compressor.py  test_conversation.py  test_cost_signal.py  test_costs.py  test_cron.py  test_ctrl_c_handling.py  test_culture.py  test_curator_lite.py  test_daemon_config.py  test_delegate.py  test_deliberate.py  test_deliberate_visibility.py  test_discord_channel.py  test_doctor.py  test_document_plugins.py  (+111 more)
workspace/: research-plan.md
workspace/research-notes/: thread-b.md
