[project]
name = "anthill-agent"
version = "0.2.27"
description = "Multi-model AI nation that decomposes one request across specialists, learns who's best at what, and gets better the longer you use it."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anthill contributors" }]
keywords = [
    "ai",
    "agent",
    "multi-agent",
    "multi-model",
    "llm",
    "pheromone",
    "swarm",
    "stigmergy",
    "deepseek",
    "minimax",
    "claude",
    "gpt",
    "mcp",
    "lark",
    "feishu",
    "wecom",
    "telegram",
    "slack",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    # 0.1.20 — `httpx[socks]` instead of bare `httpx` so users behind
    # SOCKS proxies (common with corp VPNs and on Chinese networks
    # via shadowsocks-style tunnels) don't get "socksio package not
    # installed" errors when httpx auto-respects ALL_PROXY /
    # HTTPS_PROXY env vars.
    "httpx[socks]>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
daemon = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]
docs = [
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
]
browser = [
    "playwright>=1.40.0",
]
all = [
    "anthill-agent[daemon,docs,browser]",
]

[project.scripts]
anthill = "anthill.cli.main:cli"

[project.urls]
Homepage = "https://github.com/fengty/anthill-agent"
Repository = "https://github.com/fengty/anthill-agent"
Documentation = "https://github.com/fengty/anthill-agent#readme"
Changelog = "https://github.com/fengty/anthill-agent/blob/main/CHANGELOG.md"
Issues = "https://github.com/fengty/anthill-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anthill"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true
python_version = "3.9"
